--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
       <div class="header-left">
         <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
       </div>
-      <div class="notion">
-        <h3>これはテスト用のサンプルです。</h3>
-      </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">レッスン</a>
@@ -23,6 +20,7 @@
         <a href="#" class="login">ログイン</a>
       </div>
     </div>
+    <p>※これはプロゲート練習用のサンプルです。自作ではありません。</p>
   </header>
   <div class="top-wrapper">
     <div class="container">
